# reclip-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc  null.cc  version.h.in
app_main/: CMakeLists.txt  application_main.cc  application_main.ccm  application_main.h  main.cc
base/: CMakeLists.txt  auto_reset.ccm  buildflags.h  byte_swap.ccm  byte_swap.h  constants.ccm  constants.h  host_types.h  log.cc  log.ccm  log.h  observable.h  observer.cc  observer.ccm  observer.h  observer_helper.ccm  observers_list.ccm  observers_list.h  observers_unittests.cc  platform.h  preferences.cc  preferences.ccm  preferences.h  scoped_observation.ccm  scoped_observation.h
communication/: CMakeLists.txt  client_server_types.h  communication_host.cc  communication_host.h  communication_manager.cc  communication_manager.ccm  communication_manager.h  communication_protocol_sitest.cc  communication_unittests.cc  connection.h  connection_impl.cc  connection_impl.h  connection_info_provider.ccm  message_reassembler.cc  message_reassembler.ccm  message_reassembler.h  message_reassembler_unittest.cc  message_types.ccm  message_types.h  messages.cc  messages.h  serialization.cc  serialization.ccm  serialization.h  server.ccm  server.h  server_connection.cc  server_connection.ccm  server_connection.h  server_connection_impl.cc  server_connection_impl.ccm  server_connection_impl.h  server_impl.cc  server_impl.ccm  server_impl.h
core/: CMakeLists.txt  application_main.cc  application_main.h  client_data.h  clipboard.cc  clipboard.ccm  clipboard.h  clipboard_controller.cc  clipboard_controller.h  clipboard_listener.cc  clipboard_listener.h  clipboard_listener_mac.cc  clipboard_listener_mac.h  clipboard_listener_qt.cc  clipboard_listener_qt.h  clipboard_mac.cc  clipboard_mac.ccm  clipboard_mac.h  clipboard_model.cc  clipboard_model.ccm  clipboard_model.h  clipboard_model_unittests.cc  clipboard_observer.h  clipboard_qt.cc  clipboard_qt.ccm  clipboard_qt.h  full_client_sitest.cc  host_data.h  host_types.cc  host_types.ccm  host_types.h  moc_clipboard_listener.cc  moc_clipboard_listener.h  server.cc  server.h  shortcut_listener.ccm  test_server_process.ccm  test_with_event_loop_base.cc  test_with_event_loop_base.ccm  test_with_event_loop_base.h
core/hosts_model/: host_model.ccm  hosts_list_model.ccm  hosts_model_unittests.cc
resources/: CMakeLists.txt  dark.qss  resources.qrc
ui/: CMakeLists.txt  clipboard_controller.cc  clipboard_controller.ccm  clipboard_controller.h  clipboard_controller_integration_test.cc  clipboard_controller_unittest.cc  content_window.cc  content_window.h  content_window_controller.ccm  content_window_unittest.cc  host_clipboard_view.cc  host_clipboard_view.h  host_controller.ccm  host_controller_unittest.cc  text_view.cc  text_view.h
